--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,6 +11,35 @@
       <tr>
         <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
         <td><%= user.name %></td>
+        <td><%= "フォロー数: #{user.follower.count}" %></td>
+        <td><%= "フォロワー数: #{user.followed.count}" %></td>
+        <td>
+          <% unless user == current_user %>
+            <% if current_user.following?(user) %>
+              <%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %>
+            <% else %>
+              <%= link_to 'フォローする', follow_path(user.id), method: :POST %>
+            <% end %>
+          <% end %>
+
+          <%# user.following_user.where.not(id: current_user.id).each do |user| %>
+              <%# if current_user.following?(user) %>
+                <%#= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %>
+              <%# else %>
+                <%#= link_to 'フォローする', follow_path(user.id), method: :POST %>
+              <%# end %>
+          <%# end %>
+
+          <% user.follower_user.where.not(id: current_user.id).each do |user| %>
+              <%= "id: #{user.id} email: #{user.email}" %>
+              <% if current_user.following?(user) %>
+                <%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %>
+              <% else %>
+                <%= link_to 'フォローする', follow_path(user.id), method: :POST %>
+              <% end %>
+              <%= link_to "show", user_path(user) %>
+          <% end %>
+        </td>
         <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
