--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -30,15 +30,15 @@
               <%# end %>
           <%# end %>
 
-          <% user.follower_user.where.not(id: current_user.id).each do |user| %>
-              <%= "id: #{user.id} email: #{user.email}" %>
-              <% if current_user.following?(user) %>
-                <%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %>
-              <% else %>
-                <%= link_to 'フォローする', follow_path(user.id), method: :POST %>
-              <% end %>
-              <%= link_to "show", user_path(user) %>
-          <% end %>
+          <%# user.follower_user.where.not(id: current_user.id).each do |user| %>
+              <%#= "id: #{user.id} email: #{user.email}" %>
+              <%# if current_user.following?(user) %>
+                <%#= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %>
+              <%# else %>
+                <%#= link_to 'フォローする', follow_path(user.id), method: :POST %>
+              <%# end %>
+              <%#= link_to "show", user_path(user) %>
+          <%# end %>
         </td>
         <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
       </tr>
