--- a/app/views/users/follower_user.html.erb
+++ b/app/views/users/follower_user.html.erb
@@ -9,15 +9,15 @@
       <tr></tr>
     </tr>
   <tbody>
-    <tr>
     <% @user.follower_user.each do |user| %>
+    <tr>
       <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg") %></td>
       <td><%= user.name %></td>
       <td><%= "フォロー数: #{user.follower.count}" %></td>
       <td><%= "フォロワー数: #{user.followed.count}" %></td>
-      <tr></tr>
-    <% end %>
+      <td><%= link_to 'Show', user_path(user) %></td>
     </tr>
+    <% end %>
   </tbody>
   </thead>
 </table>
