--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,38 +21,15 @@
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
-          <% if @book.favorited_by?(current_user) %>
             <td>
-              <%= link_to book_favorites_path(@book), method: :delete do %>
-                ♥<%= @book.favorites.count %> いいね
-              <% end %>
+              <div id="favorite<%= @book.id %>">
+                <%= render partial: 'favorites/favorite', locals: {book: @book} %>
+              </div>
             </td>
-            <% else %>
-            <td>
-              <%= link_to book_favorites_path(@book), method: :post do %>
-                ♡<%= @book.favorites.count %> いいね
-              <% end %>
-            </td>
-          <% end %>
           <td>コメント件数：<%= @book.book_comments.count %></td>
         </tr>
       </table>
-      <div class="comments">
-        <% @book.book_comments.each do |book_comment| %>
-          <p><%= attachment_image_tag book_comment.user, :profile_image, :fill, 40, 40, fallback: "no_image" %></p>
-          <%= book_comment.user.name %>
-          <%= book_comment.created_at.strftime('%Y/%m/%d') %><%= book_comment.comment %>
-          <% if book_comment.user == current_user %>
-            <p><%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete, class:"btn btn-danger mt-3" %></p>
-          <% end %>
-        <% end %>
-      </div>
-      <div class="new-comment">
-        <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
-          <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
-          <%= f.submit "送信する" %>
-        <% end %>
-      </div?
+      <%= render partial: 'book_comments/index', locals: { book_comment: @book_comment, book: @book} %>
     </div>
   </div>
 </div>
