--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -17,31 +17,13 @@
     <td><%= link_to "#{user.followed.count}", follower_user_user_path(user) %></td>
   </tr>
 </table>
+<div class='row'>
   <% unless user == current_user %>
     <% if current_user.following?(user) %>
-      <%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST, class:"btn btn-info mb-3" %>
+      <%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST, class:"btn btn-outline-success btn-sm btn-block rounded-pill" %>
     <% else %>
-      <%= link_to 'フォローする', follow_path(user.id), method: :POST, class:"btn btn-success mb-3" %>
+      <%= link_to 'フォローする', follow_path(user.id), method: :POST, class:"btn btn-success btn-sm btn-block rounded-pill" %>
     <% end %>
   <% end %>
-
-  <%# user.following_user.where.not(id: current_user.id).each do |user| %>
-    <%# if current_user.following?(user) %>
-      <%#= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %>
-    <%# else %>
-      <%#= link_to 'フォローする', follow_path(user.id), method: :POST %>
-    <%# end %>
-  <%# end %>
-
-  <%# user.follower_user.where.not(id: current_user.id).each do |user| %>
-    <%#= "id: #{user.id} email: #{user.email}" %>
-    <%# if current_user.following?(user) %>
-      <%#= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %>
-    <%# else %>
-      <%#= link_to 'フォローする', follow_path(user.id), method: :POST %>
-    <%# end %>
-    <%#= link_to "show", user_path(user) %>
-  <%# end %>
-<div class='row'>
-  <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+  <%= link_to '',edit_user_path(user),class: "rounded-pill btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
 </div>
