--- a/app/views/favorites/create.js.erb
+++ b/app/views/favorites/create.js.erb
@@ -1,1 +1,2 @@
 $('#favorite<%= @book.id %>').html("<%= j(render partial: 'favorite', locals: {book: @book}) %>");
+ <!--<div id="favorite<%#= @book.id %>">を選択して、'favoriteの部分テンプレートに送っている-->
