--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -29,7 +29,15 @@
           <td>コメント件数：<%= @book.book_comments.count %></td>
         </tr>
       </table>
-      <%= render partial: 'book_comments/index', locals: { book_comment: @book_comment, book: @book} %>
+      <div id="comments">
+        <%= render partial: 'book_comments/comment', locals: { book: @book} %>
+      </div>
+      <div id="new-comment">
+        <%= form_with model:[@book, @book_comment], remote: true do |f| %>
+          <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+          <%= f.submit "送信する" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
