コメント件数 Ajax

--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,3 +1,4 @@
+$(".comments-count").html("コメント数: <%= @book.book_comments.count %>");
 $('#comments').html("<%= j(render 'comment', locals: { book: @book }) %>")
 <!--id="comments"に作用する、部分テンプレート'comment'の中を@bookという変数を受け取って-->
 <!--jsの中の変数は@付きしか使えない-->
