--- a/app/views/book_comments/destroy.js.erb
+++ b/app/views/book_comments/destroy.js.erb
@@ -1,2 +1,3 @@
+$(".comments-count").html("コメント数: <%= @book.book_comments.count %>");
 $('#comments').html("<%= j(render 'comment', locals: { book: @book}) %>")
 <!--destroyの動作はコントローラーでしてくれるのでここでは必要ない-->
