--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -10,7 +10,8 @@
           <%= link_to 'Log in',new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
         </div>
         <div class="row">
-          <%= link_to 'Sign Up',new_user_registration_path, class: "btn btn-success btn-sm btn-block sign_up" %>
+          <%= link_to 'Sign Up',new_user_registration_path, data: {"turbolinks" => false}, class: "btn btn-success btn-sm btn-block sign_up" %>
+          <!--data: {"turbolinks" => false}をつけることにより、サインアップページを読み込み直さなくても住所自動入力を可能にした-->
         </div>
       </div>
     </div>
